fix scroll issue on mobile

--- a/express/css/styles.scss
+++ b/express/css/styles.scss
@@ -224,7 +224,6 @@ p {
 }
 
 .section {
-    height: 100vh;
     padding-top: 60px;
     width: 100%;
 }
@@ -273,7 +272,7 @@ p {
 
 .appearances-section {
     width: 50%;
-    margin: 0 auto;
+    margin: 0 auto 300px;
     padding: 40px 0 0;
     max-width: 550px;
 }
